--- a/css/com.html
+++ b/css/com.html
@@ -4,14 +4,77 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
+ <link rel="stylesheet" type="text/css" href="style.css">
+ <link rel="stylesheet" href="fonts/opensans/opensans.css">
 </head>
 <body>
-	sadsadsads
-	<span>!!!!!!!</span>
-	<div class="s"></div>
-	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum laborum atque pariatur eligendi ratione dolorum magnam laudantium reiciendis eius, ex explicabo aperiam culpa nemo cumque quia. Consequuntur dignissimos ratione provident?</p>
- 	<div class="s">HELLOTOEVREBODY</div>
-	<span>!!!!!!!</span>
+	<div class="container">
+	
+	
+	<header>
+		<div class="header-top"></div>
+		<div class="logo"></div>
+		<h1>МОЙ САЙТ</h1>
+		  <div class="me"></div>
+		<a href="https://www.instagram.com/agentj29/?hl=ru"><img src="img/inst.png.png" class="inst" alt="contact me" align="right "></a><a href="https://t.me/uuuu223"><img src="img/tg.png" class="tg"></a>
+	 
+
+
+	
+	<nav>
+		<a href="index.html">Главная</a>
+        <a href="moiceli.html">Мои цели</a>
+	<a href="layouts.html">Макеты</a>
+	</nav>
  
+</header>
+          <main>
+          	<table>
+          		<tr>
+          			<td class="leftbar">
+          				<ul class="lesson">
+          					    <li><a href="firstless.html">HTML</a></li>
+                    <li><a href="secless.html">HTML-таблицы и СSS-inline стили</a></li>
+                    <li><a href="thirdless.html">CSS Selector</a></li>
+                    <li><a href="finalless.html">Блочная система/Box Sizing</a></li>
+                    <li><a href="forms.html">Формы(Input type)</a></li>
+                    <li><a href="position.html">Позиционирование</a></li>
+                    <li><a href="after.html">Псевдоэлементы</a></li>
+                    <li><a href="com.html">GIT</a></li>
+
+
+          				</ul>
+          			</td>
+          			<td class="content">
+          				<div class="forms">
+          					<h1>Git</h1>
+          					<div class="contentic">
+          						<div class="headcont">
+          							
+          							<h2>GIT BASH</h2>
+          							<p>Используя Git Bash, нужно перейти в корневую директорию проекта, используя команду <b>cd "путь к проекту" </b>, <b>pwd</b> для проверки папки, в которой я сейчас нахожусь.</p>
+          							<p>Далее нужно прописать команду <b>git init</b> - эта команда создаст .git репозиторий в проекте.</p>
+          							<p><b>git config --global user.name "Ваше Имя", git config --global user.email "ВашаПочта@mail.com"</b>-
+эти команды определят информацию, которая будет использоваться при каждом commit(фиксирование изменений). Их стоит выполнить всего один раз при первичной установке Git.</p>
+							<p><b>git add .</b> - для добавления всех файлов проекта в репозиторий, так же нужно создать файл в папке с проектком, под названием - <b>git ignore</b> в этом файле, используя текстовый редактор, можно будет прописать все файлы, которые не должны добавляться в репозиторий.</p>
+							<p><b>git commit</b> - команда для фиксирования изменений в проекте.
+								<b>git checkout b название ветки</b> - команда для создания новой ветки и быстрого перехода на эту ветку. 	<br>
+							<b>git checkout название ветки</b> - команда для перехода на ту или иную ветку <br>
+							<b>git merge название ветки</b> - команда, которая соеденит выбранную ветку с <b>master</b> веткой. <br>
+							<b>git remote add origin git@github.com:agentj29/first_git.git</b> - для подключения удаленного репозитория. <br>
+							<b>git push origin master</b> - для пуша проекта на удаленный репозиторий.
+							</p>
+
+          					</div>
+          				</div>
+          			</td>
+
+          		</tr>
+          	</table>
+          </main>
+          <footer>
+          	Мой сайт 2021 &copy;
+          </footer>
+
 </body>
 </html>
