--- a/css/finalless.html
+++ b/css/finalless.html
@@ -41,6 +41,7 @@
                     <li><a href="forms.html">Формы(Input type)</a></li>
                       <li><a href="position.html">Позиционирование</a></li>
                          <li><a href="after.html">Псевдоэлементы</a></li>
+                    <li><a href="com.html">GIT</a></li>
 
                         </ul>
                     </td>
