--- a/css/index.html
+++ b/css/index.html
@@ -41,7 +41,8 @@
                       <li><a href="position.html">Позиционирование</a></li>
                          <li><a href="after.html">Псевдоэлементы</a></li>
 
-
+                    <li><a href="com.html">GIT</a></li>
+                         
           				</ul>
           			</td>
           			<td class="content">
