--- a/css/position.html
+++ b/css/position.html
@@ -40,7 +40,8 @@
                     <li><a href="forms.html">Формы(Input type)</a></li>
                     <li><a href="position.html">Позиционирование</a></li>
                        <li><a href="after.html">Псевдоэлементы</a></li>
-
+                    <li><a href="com.html">GIT</a></li>
+                       
 
           				</ul>
           			</td>
