--- a/css/com.html
+++ b/css/com.html
@@ -63,7 +63,11 @@
 							<b>git merge название ветки</b> - команда, которая соеденит выбранную ветку с <b>master</b> веткой. <br>
 							<b>git remote add origin git@github.com:agentj29/first_git.git</b> - для подключения удаленного репозитория. <br>
 							<b>git push origin master</b> - для пуша проекта на удаленный репозиторий.
-							</p>
+						
+							<b>git clone git@github.com:name/name.git</b> - команда для загрузки проекта из удаленного репозитория</p>
+							<b>git fetch</b> - для притягивания веток проекта. <br>
+							<b>git pull</b> - команда для выгрузки комитов из удаленного репозитория в локальный проект. ( состоит из <b>fetch + merge</b>)
+							
 
           					</div>
           				</div>
