--- a/css/finalless.html
+++ b/css/finalless.html
@@ -42,6 +42,8 @@
                       <li><a href="position.html">Позиционирование</a></li>
                          <li><a href="after.html">Псевдоэлементы</a></li>
                     <li><a href="com.html">GIT</a></li>
+                       <li><a href="animation.html">Анимации</a></li>
+                    
 
                         </ul>
                     </td>
