--- a/css/index.html
+++ b/css/index.html
@@ -42,6 +42,7 @@
                          <li><a href="after.html">Псевдоэлементы</a></li>
 
                     <li><a href="com.html">GIT</a></li>
+                       <li><a href="animation.html">Анимации</a></li>
                          
           				</ul>
           			</td>
