--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                          <li><a href="css/after.html">Псевдоэлементы</a></li>
 
                     <li><a href="css/com.html">GIT</a></li>
-                         <li><a href="animation.html">Анимации</a></li>
+                         <li><a href="css/animation.html">Анимации</a></li>
           				</ul>
           			</td>
           			<td class="content">
