--- a/css/layouts.html
+++ b/css/layouts.html
@@ -53,7 +53,7 @@
           				<div class="lay1"><a href="../maket/index.html"></a></div>
           				<div class="lay2"><a href="../maket2/index.html"></a></div>
                               <div class="lay3"><a href="../maket.story/index.html"></a></div>
-                              <div class="lay4"><a href="../hexagon/index.html"></a></div>
+                              <div class="lay4"><a href="../Hexagon/index.html"></a></div>
 
           				</div>
           			</td>
